[tool.poetry]
name = "ublue-website"
version = "0.1.0"
description = "ublue.it website"
authors = ["Marco Ceppi <marco@ceppi.net>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
markdown-include = "^0.8.1"
mkdocs-video = "^1.5.0"
mkdocs-git-committers-plugin-2 = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
