[tool.poetry]
name = "ublue-website"
version = "0.1.0"
description = "ublue.it website"
authors = ["Marco Ceppi <marco@ceppi.net>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.9"
markdown-include = "^0.8.1"
mkdocs-video = "^1.5.0"
mkdocs-git-committers-plugin-2 = "^1.1.2"
mkdocs-embed-external-markdown = "^2.3.0"
mkdocs-rss-plugin = "^1.6.0"
pillow = "^10.2.0"
cairosvg = "^2.7.0"
mkdocs-redirects = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
